--- a/df_creating.ipynb
+++ b/df_creating.ipynb
@@ -2,45 +2,134 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "# Creating a DataFrame for Table 1: Technical Data of Generating Units\n",
     "\n",
-    "# Data for Table 1: Technical Data of Generating Units\n",
     "data_table_1 = {\n",
-    "    \"Unit #\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],\n",
+    "    \"Unit #\": list(range(1, 13)),\n",
     "    \"Node\": [1, 2, 7, 13, 15, 15, 16, 18, 21, 22, 23, 23],\n",
-    "    \"Pimax (MW)\": [152, 152, 350, 591, 60, 155, 155, 400, 400, 300, 310, 350],\n",
-    "    \"Pimin (MW)\": [30.4, 30.4, 75, 206.85, 12, 54.25, 54.25, 100, 100, 300, 108.5, 140],\n",
-    "    \"Ri+ (MW)\": [40, 40, 70, 180, 60, 30, 30, 0, 0, 0, 60, 40],\n",
-    "    \"Ri- (MW)\": [40, 40, 70, 180, 60, 30, 30, 0, 0, 0, 60, 40],\n",
-    "    \"RiU (MW/h)\": [120, 120, 350, 240, 60, 155, 155, 280, 280, 300, 180, 240],\n",
-    "    \"RiD (MW/h)\": [120, 120, 350, 240, 60, 155, 155, 280, 280, 300, 180, 240],\n",
+    "    \"Pmax (MW)\": [152, 152, 350, 591, 60, 155, 155, 400, 400, 300, 310, 350],\n",
+    "    \"Pmin (MW)\": [30.4, 30.4, 75, 206.85, 12, 54.25, 54.25, 100, 100, 300, 108.5, 140],\n",
+    "    \"R+ (MW)\": [40, 40, 70, 180, 60, 30, 30, 0, 0, 0, 60, 40],\n",
+    "    \"R- (MW)\": [40, 40, 70, 180, 60, 30, 30, 0, 0, 0, 60, 40],\n",
+    "    \"RU (MW/h)\": [120, 120, 350, 240, 60, 155, 155, 280, 280, 300, 180, 240],\n",
+    "    \"RD (MW/h)\": [120, 120, 350, 240, 60, 155, 155, 280, 280, 300, 180, 240],\n",
     "    \"UT (h)\": [8, 8, 8, 12, 4, 8, 8, 1, 1, 0, 8, 8],\n",
     "    \"DT (h)\": [4, 4, 8, 10, 2, 8, 8, 1, 1, 0, 8, 8]\n",
     "}\n",
     "\n",
-    "# Data for Table 2: Costs and Initial State of Generating Units\n",
+    "# Creating the DataFrame\n",
+    "data_table_1 = pd.DataFrame(data_table_1)\n",
+    "\n",
+    "#save the DataFrame to a csv file\n",
+    "data_table_1.to_csv('table_1.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a DataFrame for Table 2: Costs and Initial State of Generating Units\n",
+    "\n",
     "data_table_2 = {\n",
-    "    \"Unit #\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],\n",
-    "    \"Ciu ($/MWh)\": [15, 15, 10, 8, 7, 16, 16, 0, 0, 0, 17, 16],\n",
-    "    \"Cid ($/MWh)\": [14, 14, 9, 7, 5, 14, 14, 0, 0, 0, 16, 14],\n",
-    "    \"Ci+ ($/MWh)\": [15, 15, 24, 25, 28, 16, 16, 0, 0, 0, 14, 16],\n",
-    "    \"Ci- ($/MWh)\": [11, 11, 16, 17, 23, 7, 7, 0, 0, 0, 8, 8],\n",
-    "    \"Cisu ($)\": [1430.4, 1430.4, 1725, 3056.7, 437, 312, 312, 0, 0, 0, 624, 2298],\n",
+    "    \"Unit #\": list(range(1, 13)),\n",
+    "    \"Ci ($/MWh)\": [13.32, 13.32, 20.7, 20.93, 26.11, 10.52, 10.52, 6.02, 5.47, 0, 10.52, 10.89],\n",
+    "    \"Cu ($/MWh)\": [15, 15, 10, 8, 7, 16, 16, 0, 0, 0, 17, 16],\n",
+    "    \"Cd ($/MWh)\": [14, 14, 9, 7, 5, 14, 14, 0, 0, 0, 16, 14],\n",
+    "    \"C+ ($/MWh)\": [15, 15, 24, 25, 28, 16, 16, 0, 0, 0, 14, 16],\n",
+    "    \"C- ($/MWh)\": [11, 11, 16, 17, 23, 7, 7, 0, 0, 0, 8, 8],\n",
+    "    \"Csu ($)\": [1430.4, 1430.4, 1725, 3056.7, 437, 312, 312, 0, 0, 0, 624, 2298],\n",
     "    \"Pini (MW)\": [76, 76, 0, 0, 0, 0, 124, 240, 240, 240, 248, 280],\n",
     "    \"Uini (0/1)\": [1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1],\n",
     "    \"Tini (h)\": [22, 22, -2, -1, -1, -2, 10, 50, 16, 24, 10, 50]\n",
     "}\n",
     "\n",
-    "#save data to csv\n",
-    "df = pd.DataFrame(data_table_1)\n",
-    "df.to_csv('table_1.csv', index=False)\n",
+    "# Creating the DataFrame\n",
+    "data_table_2 = pd.DataFrame(data_table_2)\n",
     "\n",
-    "df = pd.DataFrame(data_table_2)\n",
-    "df.to_csv('table_2.csv', index=False)\n"
+    "#save data to csv\n",
+    "data_table_2.to_csv('table_2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a DataFrame for Table 3: Load Profile\n",
+    "\n",
+    "data_table_3 = {\n",
+    "    \"Hour\": list(range(1, 25)),\n",
+    "    \"System demand (MW)\": [\n",
+    "        1775.835, 1669.815, 1590.3, 1563.795, 1563.795, 1590.3, 1961.37, 2279.43,\n",
+    "        2517.975, 2544.48, 2544.48, 2517.975, 2517.975, 2517.975, 2464.965, 2464.965,\n",
+    "        2623.995, 2650.5, 2650.5, 2544.48, 2411.955, 2199.915, 1934.865, 1669.815\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Creating the DataFrame\n",
+    "data_table_3 = pd.DataFrame(data_table_3)\n",
+    "\n",
+    "#save data to csv\n",
+    "data_table_3.to_csv('table_3.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a DataFrame for Table 4: Node Location and Distribution of the Total System Demand\n",
+    "\n",
+    "data_table_4 = {\n",
+    "    \"Load #\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17],\n",
+    "    \"Node\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 13, 14, 15, 16, 18, 19, 20],\n",
+    "    \"% of system load\": [3.8, 3.4, 6.3, 2.6, 2.5, 4.8, 4.4, 6, 6.1, 6.8, 9.3, 6.8, 11.1, 3.5, 11.7, 6.4, 4.5]\n",
+    "}\n",
+    "\n",
+    "# Creating the DataFrame\n",
+    "data_table_4 = pd.DataFrame(data_table_4)\n",
+    "\n",
+    "#save data to csv\n",
+    "data_table_4.to_csv('table_4.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a DataFrame for the provided table data\n",
+    "\n",
+    "data_table_5 = {\n",
+    "    \"From\": [1, 1, 1, 2, 2, 3, 3, 4, 5, 6, 7, 8, 8, 9, 9, 10, 10, 11, 11, 12, 12, 13, 14, 15, 15, 15, 16, 16, 17, 17, 18, 19, 20, 21],\n",
+    "    \"To\": [2, 3, 5, 4, 6, 9, 24, 9, 10, 10, 8, 9, 10, 11, 12, 11, 12, 13, 14, 13, 23, 23, 16, 16, 21, 24, 17, 19, 18, 22, 21, 20, 23, 22],\n",
+    "    \"Reactance (p.u.)\": [0.0146, 0.2253, 0.0907, 0.1356, 0.205, 0.1271, 0.084, 0.111, 0.094, 0.0642, 0.0652, 0.1762, 0.1762, 0.084, 0.084, 0.084, 0.084, 0.0488, 0.0426, 0.0488, 0.0985, 0.0884, 0.0594, 0.0172, 0.0249, 0.0529, 0.0263, 0.0234, 0.0143, 0.1069, 0.0132, 0.0203, 0.0112, 0.0692],\n",
+    "    \"Capacity (MVA)\": [175, 175, 350, 175, 175, 175, 400, 175, 350, 175, 350, 175, 175, 400, 400, 400, 400, 500, 500, 500, 500, 500, 500, 500, 1000, 500, 500, 500, 500, 500, 1000, 1000, 1000, 500]\n",
+    "}\n",
+    "\n",
+    "# Creating the DataFrame\n",
+    "data_table_5 = pd.DataFrame(data_table_5)\n",
+    "\n",
+    "#save data to csv\n",
+    "data_table_5.to_csv('table_5.csv', index=False)\n"
    ]
   }
  ],
