First model draft

--- a/df_creating.ipynb
+++ b/df_creating.ipynb
@@ -34,7 +34,7 @@
     "data_table_1 = pd.DataFrame(data_table_1)\n",
     "\n",
     "#save the DataFrame to a csv file\n",
-    "data_table_1.to_csv('table_1.csv', index=False)\n"
+    "data_table_1.to_csv('data/technical_data_generation.csv', index=False)\n"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "data_table_2 = pd.DataFrame(data_table_2)\n",
     "\n",
     "#save data to csv\n",
-    "data_table_2.to_csv('table_2.csv', index=False)"
+    "data_table_2.to_csv('data/cost_generation.csv', index=False)"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "data_table_3 = pd.DataFrame(data_table_3)\n",
     "\n",
     "#save data to csv\n",
-    "data_table_3.to_csv('table_3.csv', index=False)"
+    "data_table_3.to_csv('data/demand.csv', index=False)"
    ]
   },
   {
@@ -107,7 +107,7 @@
     "data_table_4 = pd.DataFrame(data_table_4)\n",
     "\n",
     "#save data to csv\n",
-    "data_table_4.to_csv('table_4.csv', index=False)"
+    "data_table_4.to_csv('data/load_distribution.csv', index=False)"
    ]
   },
   {
@@ -129,7 +129,7 @@
     "data_table_5 = pd.DataFrame(data_table_5)\n",
     "\n",
     "#save data to csv\n",
-    "data_table_5.to_csv('table_5.csv', index=False)\n"
+    "data_table_5.to_csv('data/transmission_lines.csv', index=False)\n"
    ]
   }
  ],
