--- a/Task1/model1_Leon.ipynb
+++ b/Task1/model1_Leon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -21,13 +21,7 @@
      "output_type": "stream",
      "text": [
       "┌ Warning: thread = 1 warning: only found 1 / 7 columns around data row: 25. Filling remaining columns with `missing`\n",
-      "└ @ CSV C:\\Users\\leonr\\.julia\\packages\\CSV\\aoJqo\\src\\file.jl:586\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "└ @ CSV C:\\Users\\leonr\\.julia\\packages\\CSV\\aoJqo\\src\\file.jl:586\n",
       "┌ Warning: thread = 1 warning: only found 1 / 7 columns around data row: 25. Filling remaining columns with `missing`\n",
       "└ @ CSV C:\\Users\\leonr\\.julia\\packages\\CSV\\aoJqo\\src\\file.jl:586\n"
      ]
@@ -64,7 +58,7 @@
     "#Load data wind\n",
     "#Load wind production profile\n",
     "wind_powerprofile = CSV.File(\"../data/wind_powerprofile.csv\") |> DataFrame\n",
-    "wind_inst_capacity = CSV.File(\"../data/technical_data_wind_generation\")"
+    "wind_inst_capacity = CSV.File(\"../data/technical_data_generation\")"
    ]
   },
   {
