--- a/Task1/model1_Leon.ipynb
+++ b/Task1/model1_Leon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -27,21 +27,19 @@
      ]
     },
     {
-     "ename": "ArgumentError",
-     "evalue": "ArgumentError: \"../data/technical_data_wind_generation\" is not a valid file or doesn't exist",
+     "ename": "Base.Meta.ParseError",
+     "evalue": "ParseError:\n# Error @ c:\\Users\\leonr\\OneDrive\\Documents\\DTU\\Renewables in Electricity Markets\\renewables_in_electricity_markets\\Task1\\model1_Leon.ipynb:14:76\n#Load capacity of wind\r\nwind_inst_capacity = CSV.File(\"../data/wind_technicaldata.csv) |> DataFrame\n#                                                                          └ ── unterminated string literal",
      "output_type": "error",
      "traceback": [
-      "ArgumentError: \"../data/technical_data_wind_generation\" is not a valid file or doesn't exist\n",
+      "ParseError:\n",
+      "# Error @ c:\\Users\\leonr\\OneDrive\\Documents\\DTU\\Renewables in Electricity Markets\\renewables_in_electricity_markets\\Task1\\model1_Leon.ipynb:14:76\n",
+      "#Load capacity of wind\r\n",
+      "wind_inst_capacity = CSV.File(\"../data/wind_technicaldata.csv) |> DataFrame\n",
+      "#                                                                          └ ── unterminated string literal\n",
       "\n",
       "Stacktrace:\n",
-      " [1] CSV.Context(source::CSV.Arg, header::CSV.Arg, normalizenames::CSV.Arg, datarow::CSV.Arg, skipto::CSV.Arg, footerskip::CSV.Arg, transpose::CSV.Arg, comment::CSV.Arg, ignoreemptyrows::CSV.Arg, ignoreemptylines::CSV.Arg, select::CSV.Arg, drop::CSV.Arg, limit::CSV.Arg, buffer_in_memory::CSV.Arg, threaded::CSV.Arg, ntasks::CSV.Arg, tasks::CSV.Arg, rows_to_check::CSV.Arg, lines_to_check::CSV.Arg, missingstrings::CSV.Arg, missingstring::CSV.Arg, delim::CSV.Arg, ignorerepeated::CSV.Arg, quoted::CSV.Arg, quotechar::CSV.Arg, openquotechar::CSV.Arg, closequotechar::CSV.Arg, escapechar::CSV.Arg, dateformat::CSV.Arg, dateformats::CSV.Arg, decimal::CSV.Arg, groupmark::CSV.Arg, truestrings::CSV.Arg, falsestrings::CSV.Arg, stripwhitespace::CSV.Arg, type::CSV.Arg, types::CSV.Arg, typemap::CSV.Arg, pool::CSV.Arg, downcast::CSV.Arg, lazystrings::CSV.Arg, stringtype::CSV.Arg, strict::CSV.Arg, silencewarnings::CSV.Arg, maxwarnings::CSV.Arg, debug::CSV.Arg, parsingdebug::CSV.Arg, validate::CSV.Arg, streaming::CSV.Arg)\n",
-      "   @ CSV C:\\Users\\leonr\\.julia\\packages\\CSV\\aoJqo\\src\\context.jl:314\n",
-      " [2] #File#32\n",
-      "   @ C:\\Users\\leonr\\.julia\\packages\\CSV\\aoJqo\\src\\file.jl:222 [inlined]\n",
-      " [3] CSV.File(source::String)\n",
-      "   @ CSV C:\\Users\\leonr\\.julia\\packages\\CSV\\aoJqo\\src\\file.jl:162\n",
-      " [4] top-level scope\n",
-      "   @ c:\\Users\\leonr\\OneDrive\\Documents\\DTU\\Renewables in Electricity Markets\\renewables_in_electricity_markets\\Task1\\model1_Leon.ipynb:13"
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\leonr\\OneDrive\\Documents\\DTU\\Renewables in Electricity Markets\\renewables_in_electricity_markets\\Task1\\model1_Leon.ipynb:14"
      ]
     }
    ],
@@ -58,7 +56,8 @@
     "#Load data wind\n",
     "#Load wind production profile\n",
     "wind_powerprofile = CSV.File(\"../data/wind_powerprofile.csv\") |> DataFrame\n",
-    "wind_inst_capacity = CSV.File(\"../data/technical_data_generation\")"
+    "#Load capacity of wind\n",
+    "wind_inst_capacity = CSV.File(\"../data/) |> DataFrame"
    ]
   },
   {
