--- a/Task1/model1_Leon.ipynb
+++ b/Task1/model1_Leon.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -27,20 +27,39 @@
      ]
     },
     {
-     "ename": "Base.Meta.ParseError",
-     "evalue": "ParseError:\n# Error @ c:\\Users\\leonr\\OneDrive\\Documents\\DTU\\Renewables in Electricity Markets\\renewables_in_electricity_markets\\Task1\\model1_Leon.ipynb:14:76\n#Load capacity of wind\r\nwind_inst_capacity = CSV.File(\"../data/wind_technicaldata.csv) |> DataFrame\n#                                                                          └ ── unterminated string literal",
-     "output_type": "error",
-     "traceback": [
-      "ParseError:\n",
-      "# Error @ c:\\Users\\leonr\\OneDrive\\Documents\\DTU\\Renewables in Electricity Markets\\renewables_in_electricity_markets\\Task1\\model1_Leon.ipynb:14:76\n",
-      "#Load capacity of wind\r\n",
-      "wind_inst_capacity = CSV.File(\"../data/wind_technicaldata.csv) |> DataFrame\n",
-      "#                                                                          └ ── unterminated string literal\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\leonr\\OneDrive\\Documents\\DTU\\Renewables in Electricity Markets\\renewables_in_electricity_markets\\Task1\\model1_Leon.ipynb:14"
-     ]
+     "data": {
+      "text/html": [
+       "<div><div style = \"float: left;\"><span>6×4 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">Unit</th><th style = \"text-align: left;\">Node</th><th style = \"text-align: left;\">Pmax (MW)</th><th style = \"text-align: left;\">Pmin (MW)</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"Int64\" style = \"text-align: left;\">Int64</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">1</td><td style = \"text-align: right;\">3</td><td style = \"text-align: right;\">200</td><td style = \"text-align: right;\">0</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">2</td><td style = \"text-align: right;\">5</td><td style = \"text-align: right;\">200</td><td style = \"text-align: right;\">0</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">3</td><td style = \"text-align: right;\">7</td><td style = \"text-align: right;\">200</td><td style = \"text-align: right;\">0</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">4</td><td style = \"text-align: right;\">16</td><td style = \"text-align: right;\">200</td><td style = \"text-align: right;\">0</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">5</td><td style = \"text-align: right;\">21</td><td style = \"text-align: right;\">200</td><td style = \"text-align: right;\">0</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">6</td><td style = \"text-align: right;\">6</td><td style = \"text-align: right;\">23</td><td style = \"text-align: right;\">200</td><td style = \"text-align: right;\">0</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|cccc}\n",
+       "\t& Unit & Node & Pmax (MW) & Pmin (MW)\\\\\n",
+       "\t\\hline\n",
+       "\t& Int64 & Int64 & Int64 & Int64\\\\\n",
+       "\t\\hline\n",
+       "\t1 & 1 & 3 & 200 & 0 \\\\\n",
+       "\t2 & 2 & 5 & 200 & 0 \\\\\n",
+       "\t3 & 3 & 7 & 200 & 0 \\\\\n",
+       "\t4 & 4 & 16 & 200 & 0 \\\\\n",
+       "\t5 & 5 & 21 & 200 & 0 \\\\\n",
+       "\t6 & 6 & 23 & 200 & 0 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m6×4 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m Unit  \u001b[0m\u001b[1m Node  \u001b[0m\u001b[1m Pmax (MW) \u001b[0m\u001b[1m Pmin (MW) \u001b[0m\n",
+       "     │\u001b[90m Int64 \u001b[0m\u001b[90m Int64 \u001b[0m\u001b[90m Int64     \u001b[0m\u001b[90m Int64     \u001b[0m\n",
+       "─────┼────────────────────────────────────\n",
+       "   1 │     1      3        200          0\n",
+       "   2 │     2      5        200          0\n",
+       "   3 │     3      7        200          0\n",
+       "   4 │     4     16        200          0\n",
+       "   5 │     5     21        200          0\n",
+       "   6 │     6     23        200          0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -48,7 +67,7 @@
     "demand = CSV.File(\"../data/demand.csv\") |> DataFrame\n",
     "\n",
     "#Load data on generation units offer\n",
-    "offer = CSV.File(\"../data/cost_generation.csv\") |> DataFrame\n",
+    "offerConGen = CSV.File(\"../data/cost_generation.csv\") |> DataFrame\n",
     "\n",
     "#Load data on capacity of generation units \n",
     "capacity = CSV.File(\"../data/technical_data_generation.csv\") |> DataFrame\n",
@@ -57,7 +76,30 @@
     "#Load wind production profile\n",
     "wind_powerprofile = CSV.File(\"../data/wind_powerprofile.csv\") |> DataFrame\n",
     "#Load capacity of wind\n",
-    "wind_inst_capacity = CSV.File(\"../data/) |> DataFrame"
+    "wind_inst_capacity = CSV.File(\"../data/wind_technicaldata.csv\") |> DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `np` not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `np` not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\leonr\\OneDrive\\Documents\\DTU\\Renewables in Electricity Markets\\renewables_in_electricity_markets\\Task1\\model1_Leon.ipynb:2"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculate power supply from wind generators\n",
+    "offerWindGen = np.multiply(wind_powerprofile, wind_inst_capacity)"
    ]
   },
   {
