Fix definition variables model1_max

--- a/data Assign 1/model1_max.ipynb
+++ b/data Assign 1/model1_max.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -156,27 +156,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55555555555555555"
+     ]
+    }
+   ],
    "source": [
     "##Computation of the optimization problem for every hour\n",
     "\n",
     "#for hour in 1:24\n",
     "    # Define the decision variables for every supply and every demand\n",
     "    unregister(model, :x)  # Unregister the existing variable named \"x\" from the model\n",
-    "    @variable(model, supply[1:size(Conv_gen, 1) + size(Wind_farms, 1)], demand[1:size(Demands, 1)])  # Create the new variable\n",
+    "    @variable(model, x[1:size(Conv_gen, 1) + size(Wind_farms, 1) + size(Demands, 1)])  # Create the new variables\n",
+    "\n",
     "    for i in 1:size(Conv_gen, 1)\n",
-    "        set_lower_bound(supply[i], 0)  # Set the lower bound\n",
-    "        set_upper_bound(supply[i], Conv_gen[i,6])  # Set the upper bound\n",
+    "        set_lower_bound(x[i], 0)  # Set the lower bound\n",
+    "        set_upper_bound(x[i], Conv_gen[i,6])  # Set the upper bound\n",
     "    end\n",
     "    for i in (size(Conv_gen, 1) + 1):(size(Conv_gen, 1)+size(Wind_farms, 1))\n",
-    "        set_lower_bound(supply[i], 0)  # Set the lower bound\n",
-    "        set_upper_bound(supply[i], Wind_farms[i - size(Conv_gen, 1),4])  # Set the upper bound\n",
+    "        set_lower_bound(x[i], 0)  # Set the lower bound\n",
+    "        set_upper_bound(x[i], Wind_farms[i - size(Conv_gen, 1),4])  # Set the upper bound\n",
     "    end\n",
     "    for i in (size(Conv_gen, 1)+size(Wind_farms, 1) + 1):(size(Conv_gen, 1) + size(Wind_farms, 1) + size(Demands, 1))\n",
-    "        set_lower_bound(demand[i], 0)  # Set the lower bound\n",
-    "        set_upper_bound(demand[i], Wind_farms[i - size(Conv_gen, 1),4])  # Set the upper bound\n",
+    "        set_lower_bound(x[i], 0)  # Set the lower bound\n",
+    "        set_upper_bound(x[i], Demands[i - size(Conv_gen, 1) - size(Wind_farms, 1),3])  # Set the upper bound\n",
     "    end\n"
    ]
   },
