--- a/df_creating.ipynb
+++ b/df_creating.ipynb
@@ -131,6 +131,39 @@
     "#save data to csv\n",
     "data_table_5.to_csv('data/transmission_lines.csv', index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add column to wind_technicaldata\n",
+    "wind_technicaldata = pd.read_csv('data/wind_technicaldata.csv')\n",
+    "wind_technicaldata['Ci ($/MWh)'] = 0\n",
+    "wind_technicaldata.to_csv('data/wind_technicaldata.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "#create dictonary for demand, 20 entries  with an dataframe with random values for each hour, assigned to a node and including quantity and price\n",
+    "demand = {}\n",
+    "for i in range(1,21):\n",
+    "    demand[i] = pd.DataFrame({'Hour': list(range(1, 25)),\n",
+    "    'Node': [i for x in range(24)],\n",
+    "    'Quantity (MW)': [random.uniform(0, 100) for x in range(24)],\n",
+    "    'Price ($/MWh)': [random.uniform(0, 100) for x in range(24)]})\n",
+    "\n",
+    "#save data to csv\n",
+    "for i in range(1,21):\n",
+    "    demand[i].to_csv('data/demand_bids/demand_node_'+str(i)+'.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
