Improvement on model step 1

--- a/data Assign 1/model1_max.ipynb
+++ b/data Assign 1/model1_max.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -156,17 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55555555555555555"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##Computation of the optimization problem for every hour\n",
     "\n",
@@ -186,7 +178,25 @@
     "    for i in (size(Conv_gen, 1)+size(Wind_farms, 1) + 1):(size(Conv_gen, 1) + size(Wind_farms, 1) + size(Demands, 1))\n",
     "        set_lower_bound(x[i], 0)  # Set the lower bound\n",
     "        set_upper_bound(x[i], Demands[i - size(Conv_gen, 1) - size(Wind_farms, 1),3])  # Set the upper bound\n",
-    "    end\n"
+    "    end\n",
+    "\n",
+    "    # Define the objective function\n",
+    "    @objective(model, Min, \n",
+    "    - (sum(Demands[demand,4] * x[demand + size(Conv_gen, 1) + size(Wind_farms, 1)] for demand in 1:size(Demands,1))\n",
+    "    - (sum(Conv_gen[generator,3] * x[generator] for generator in 1:size(Conv_gen,1))\n",
+    "    + sum( 0 * x[generator + size(Conv_gen,1)] for generator in 1:size(Wind_farms,1)))))\n",
+    "\n",
+    "     # Add the equilibrium constraint\n",
+    "     @constraint(model, sum(x[generator] for generator in 1:size(Conv_gen,1)+size(Wind_farms,1)) == sum(x[demand + size(Conv_gen, 1) + size(Wind_farms, 1)] for demand in 1:size(Demands,1)))\n",
+    "\n",
+    "    # Print the model\n",
+    "    #print(model)\n",
+    "\n",
+    "    # Solve the model\n",
+    "    optimize!(model)\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
