Cleanup folder Task1

--- a/Max/Model_Task1_Max.ipynb
+++ b/Max/Model_Task1_Max.ipynb
@@ -86,16 +86,16 @@
     "##Creation of the Input DataFrames\n",
     "\n",
     "#load demand data\n",
-    "Demands = CSV.File(\"../data Assign 1/Demands.csv\") |> DataFrame\n",
+    "Demands = CSV.File(\"../Max/Data/Demands.csv\") |> DataFrame\n",
     "\n",
     "#load conventional generators data\n",
-    "Conv_gen = CSV.File(\"../data Assign 1/Conventional_generators.csv\") |> DataFrame\n",
+    "Conv_gen = CSV.File(\"../Max/Data/Conventional_generators.csv\") |> DataFrame\n",
     "\n",
     "#load wind farms data\n",
-    "Wind_farms = CSV.File(\"../data Assign 1/Wind_farms.csv\") |> DataFrame\n",
+    "Wind_farms = CSV.File(\"../Max/Data/Wind_farms.csv\") |> DataFrame\n",
     "\n",
     "#load transmission lines data\n",
-    "Trans_lines = CSV.File(\"../data Assign 1/transmission_lines.csv\") |> DataFrame"
+    "Trans_lines = CSV.File(\"../Max/Data/transmission_lines.csv\") |> DataFrame"
    ]
   },
   {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,33 +167,30 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hour 2: Optimal solution found\n",
-      "Hour 3: Optimal solution found\n",
-      "Hour 4: Optimal solution found\n",
-      "Hour 5: Optimal solution found\n",
-      "Hour 6: Optimal solution found\n",
-      "Hour 7: Optimal solution found\n",
-      "Hour 8: Optimal solution found\n",
-      "Hour 9: Optimal solution found\n",
-      "Hour 10: Optimal solution found\n",
-      "Hour 11: Optimal solution found\n",
-      "Hour 12: Optimal solution found\n",
-      "Hour 13: Optimal solution found\n",
-      "Hour 14: Optimal solution found\n",
-      "Hour 15: Optimal solution found\n",
-      "Hour 16: Optimal solution found\n",
-      "Hour 17: Optimal solution found\n",
-      "Hour 18: Optimal solution found\n",
-      "Hour 19: Optimal solution found\n",
-      "Hour 20: Optimal solution found\n",
-      "Hour 21: Optimal solution found\n",
-      "Hour 22: Optimal solution found\n",
-      "Hour 23: Optimal solution found\n",
-      "Hour 24: Optimal solution found\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div><div style = \"float: left;\"><span>1×18 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">hour</th><th style = \"text-align: left;\">total_supply</th><th style = \"text-align: left;\">supply_n°1</th><th style = \"text-align: left;\">supply_n°2</th><th style = \"text-align: left;\">supply_n°3</th><th style = \"text-align: left;\">supply_n°4</th><th style = \"text-align: left;\">supply_n°5</th><th style = \"text-align: left;\">supply_n°6</th><th style = \"text-align: left;\">supply_n°7</th><th style = \"text-align: left;\">supply_n°8</th><th style = \"text-align: left;\">supply_n°9</th><th style = \"text-align: left;\">supply_n°10</th><th style = \"text-align: left;\">supply_n°11</th><th style = \"text-align: left;\">supply_n°12</th><th style = \"text-align: left;\">supply_n°13</th><th style = \"text-align: left;\">supply_n°14</th><th style = \"text-align: left;\">supply_n°15</th><th style = \"text-align: left;\">supply_n°16</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">1</td><td style = \"text-align: right;\">2207.0</td><td style = \"text-align: right;\">106.4</td><td style = \"text-align: right;\">106.4</td><td style = \"text-align: right;\">217.64</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">108.5</td><td style = \"text-align: right;\">108.5</td><td style = \"text-align: right;\">280.0</td><td style = \"text-align: right;\">280.0</td><td style = \"text-align: right;\">210.0</td><td style = \"text-align: right;\">217.0</td><td style = \"text-align: right;\">245.0</td><td style = \"text-align: right;\">120.54</td><td style = \"text-align: right;\">115.52</td><td style = \"text-align: right;\">53.34</td><td style = \"text-align: right;\">38.16</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|cccccccc}\n",
+       "\t& hour & total\\_supply & supply\\_n°1 & supply\\_n°2 & supply\\_n°3 & supply\\_n°4 & supply\\_n°5 & \\\\\n",
+       "\t\\hline\n",
+       "\t& Int64 & Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & \\\\\n",
+       "\t\\hline\n",
+       "\t1 & 1 & 2207.0 & 106.4 & 106.4 & 217.64 & 0.0 & 0.0 & $\\dots$ \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m1×18 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m hour  \u001b[0m\u001b[1m total_supply \u001b[0m\u001b[1m supply_n°1 \u001b[0m\u001b[1m supply_n°2 \u001b[0m\u001b[1m supply_n°3 \u001b[0m\u001b[1m supply_n°4 \u001b[0m\u001b[1m su\u001b[0m ⋯\n",
+       "     │\u001b[90m Int64 \u001b[0m\u001b[90m Float64      \u001b[0m\u001b[90m Float64    \u001b[0m\u001b[90m Float64    \u001b[0m\u001b[90m Float64    \u001b[0m\u001b[90m Float64    \u001b[0m\u001b[90m Fl\u001b[0m ⋯\n",
+       "─────┼──────────────────────────────────────────────────────────────────────────\n",
+       "   1 │     1        2207.0       106.4       106.4      217.64         0.0     ⋯\n",
+       "\u001b[36m                                                              12 columns omitted\u001b[0m"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -205,7 +202,7 @@
     "empty!(details_results_supply)\n",
     "\n",
     "\n",
-    "for hour in 1:24\n",
+    "hour = 1\n",
     "    # Define the decision variables for every supply and every demand\n",
     "    unregister(model, :x)  # Unregister the existing variable named \"x\" from the model\n",
     "    unregister(model, :BalanceConstraint)\n",
@@ -261,20 +258,20 @@
     "    else\n",
     "        println(\"Hour \", hour, \": Solver status: \", status)\n",
     "    end\n",
-    "end\n",
+    "\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"../data Assign 1/Results/details_results_supply_Max\""
+       "\"../Max/Results/Task1/details_results_supply_Max\""
       ]
      },
      "metadata": {},
@@ -283,9 +280,9 @@
    ],
    "source": [
     "#save result_df to csv\n",
-    "CSV.write(\"../data Assign 1/Results/main_result_Max\", main_result)\n",
-    "CSV.write(\"../data Assign 1/Results/details_results_demand_Max\", details_results_demand)\n",
-    "CSV.write(\"../data Assign 1/Results/details_results_supply_Max\", details_results_supply)\n"
+    "CSV.write(\"../Max/Results/Task1/main_result_Max\", main_result)\n",
+    "CSV.write(\"../Max/Results/Task1/details_results_demand_Max\", details_results_demand)\n",
+    "CSV.write(\"../Max/Results/Task1/details_results_supply_Max\", details_results_supply)\n"
    ]
   }
  ],
