--- a/Task1/model1_jan.ipynb
+++ b/Task1/model1_jan.ipynb
@@ -97,9 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ErrorException",
+     "evalue": "syntax: character literal contains multiple characters",
+     "output_type": "error",
+     "traceback": [
+      "syntax: character literal contains multiple characters\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\janle\\Desktop\\Master_local\\2\\renewables_in_electricity_markets\\Task1\\model1_jan.ipynb:10"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "for hour in 1:24\n",
@@ -108,6 +121,20 @@
     "\n",
     "  # Define the decision variables for every generator\n",
     "  unregister(model, :x)  # Unregister the existing variable named \"x\" from the model\n",
+    "  \n",
+    "  #demand bids\n",
+    "  name = \"demand_hour_\" * string(hour-1) * \".csv\"\n",
+    "  demand_bids = CSV.File(\"../data/demand_bids_hour/\" * name) |> DataFrame\n",
+    "   \n",
+    "  # number of convential generators\n",
+    "   G = 1:size(cost, 1)\n",
+    "\n",
+    "   # number of demand\n",
+    "   D = 20\n",
+    " \n",
+    "   # number of wind generators\n",
+    "   W = 1:size(wind, 1)\n",
+    "\n",
     "\n",
     "  # decision variables for convential generators\n",
     "  @variable(model, x[1:size(cost, 1)])  # Create the new variable\n",
@@ -118,9 +145,16 @@
     "\n",
     "  # wind decision variables\n",
     "  @variable(model, x_wind[1:size(wind, 1)])  # Create the new variable\n",
-    "  for generator in 1:size(cost, 1)\n",
-    "      set_lower_bound(x_wind[generator], capacity[generator,4])  # Set the lower bound\n",
-    "      set_upper_bound(x_wind[generator], capacity[generator,3])  # Set the upper bound\n",
+    "  for generator in 1:size(wind, 1)\n",
+    "      set_lower_bound(x_wind[generator], wind[generator,4])  # Set the lower bound\n",
+    "      set_upper_bound(x_wind[generator], wind[generator,3])  # Set the upper bound\n",
+    "  end\n",
+    "\n",
+    "  # decision variables for demand\n",
+    "  @variable(model, y[1:size(demand_bids, 1)])  # Create the new variable\n",
+    "  for bid in 1:size(demand_bids, 1)\n",
+    "      set_lower_bound(y[bid], 0)  # Set the lower bound\n",
+    "      set_upper_bound(y[bid], demand_bids[bid,2])  # Set the upper bound\n",
     "  end\n",
     "\n",
     "\n",
