--- a/df_creating.ipynb
+++ b/df_creating.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +163,44 @@
     "#save data to csv\n",
     "for i in range(1,21):\n",
     "    demand[i].to_csv('data/demand_bids/demand_node_'+str(i)+'.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#return list of demand_bids folder\n",
+    "import os\n",
+    "\n",
+    "# Replace 'your_specific_folder_path' with the path to the folder you are interested in\n",
+    "folder_path = 'data/demand_bids'\n",
+    "\n",
+    "# List all files in the specified folder\n",
+    "file_list = os.listdir(folder_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create for each hour a dataframe of the bids\n",
+    "\n",
+    "for hour in range(0,24):\n",
+    "    demand_bids = pd.DataFrame(columns=['Node', 'Quantity (MW)', 'Price ($/MWh)'])\n",
+    "    for bid in file_list:\n",
+    "        bid_df = pd.read_csv('data/demand_bids/'+bid)\n",
+    "        # Data for the new row\n",
+    "        new_row = {'Node': bid_df['Node'][hour], 'Quantity (MW)': bid_df['Quantity (MW)'][hour], 'Price ($/MWh)':bid_df['Price ($/MWh)'][hour]}\n",
+    "\n",
+    "        # Adding a new row without using the append function\n",
+    "        # We're using loc to add a row at a specified index\n",
+    "        demand_bids.loc[len(demand_bids)] = new_row\n",
+    "    #save demand bids\n",
+    "    demand_bids.to_csv('data/demand_bids_hour/demand_hour_'+str(hour)+'.csv', index=False)"
    ]
   }
  ],
