--- a/df_creating.ipynb
+++ b/df_creating.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +86,12 @@
     "data_table_3 = pd.DataFrame(data_table_3)\n",
     "\n",
     "#save data to csv\n",
-    "data_table_3.to_csv('data/demand.csv', index=False)"
+    "data_table_3.to_csv('data/system_load.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,28 +146,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "import numpy as np\n",
+    "\n",
+    "#load the data\n",
+    "demand_othersource = pd.read_csv('Max/Data/Demands.csv')\n",
+    "node_list = list(demand_othersource['Location [node]'])\n",
+    "power_list = list(demand_othersource[' Consumption [MW]'])\n",
+    "\n",
+    "#load demand\n",
+    "sytem_load = pd.read_csv('data/system_load.csv')\n",
+    "\n",
+    "#normalize the demand column\n",
+    "sytem_load['System demand (MW) norm'] = sytem_load['System demand (MW)'] / sytem_load['System demand (MW)'].mean()\n",
+    "\n",
     "#create dictonary for demand, 20 entries  with an dataframe with random values for each hour, assigned to a node and including quantity and price\n",
-    "demand = {}\n",
-    "for i in range(1,21):\n",
-    "    demand[i] = pd.DataFrame({'Hour': list(range(1, 25)),\n",
-    "    'Node': [i for x in range(24)],\n",
-    "    'Quantity (MW)': [random.uniform(0, 300) for x in range(24)],\n",
+    "demand_dict = {}\n",
+    "for i in range(0,len(node_list)):\n",
+    "    demand_dict[i] = pd.DataFrame({'Hour': list(range(1, 25)),\n",
+    "    'Node': node_list[i],\n",
+    "    'Quantity (MW)': power_list[i] * sytem_load['System demand (MW) norm'],\n",
     "    'Price ($/MWh)': [random.uniform(0, 35) for x in range(24)]})\n",
     "\n",
     "#save data to csv\n",
-    "for i in range(1,21):\n",
-    "    demand[i].to_csv('data/demand_bids/demand_node_'+str(i)+'.csv', index=False)"
+    "for i in range(0,len(node_list)):\n",
+    "    demand_dict[i].to_csv('data/demand_bids/demand_node_'+str(i)+'.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
